<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/soundSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8sp"/>

    <SeekBar
        android:id="@+id/soundSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"

        />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintEnd_toStartOf="@id/pauseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundSeekBar" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintEnd_toStartOf="@id/stopButton"
        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/soundSeekBar"
        />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pauseButton"
        app:layout_constraintTop_toBottomOf="@id/soundSeekBar"

        />

    <TextView
        android:id="@+id/taleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/englishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pauseButton"
        android:textSize="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/germanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_germanButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/englishButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taleView"
        android:layout_marginBottom="8sp"
        />

    <Button
        android:id="@+id/englishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_englishButton"
        app:layout_constraintStart_toEndOf="@id/germanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taleView"
        android:layout_marginBottom="8sp"
     />

</android.support.constraint.ConstraintLayout>